[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "metas-peft-experiments"
version = "0.1.0"
requires-python = ">=3.9"
description = "MetaSurrogate-PEFT experiments"

dependencies = [
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "wandb>=0.15",
    "optuna>=3.5",
    "torch>=2.1",
    "transformers>=4.35",
    "datasets>=2.14",
    "peft>=0.6",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pandas>=2.1"
]